--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -82,13 +82,14 @@
   background-color: rgb(49, 49, 49);
   color: white;
   bottom: 10%;
+  right: 0;
 
   width: 60px;
   height: 50px;
   z-index: 3;
 
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
   border: none;
 
   display: flex;
