--- a/src/components/table/Table.css
+++ b/src/components/table/Table.css
@@ -52,3 +52,14 @@
   background-color: rgb(248, 63, 63);
   border-radius: 50%;
 }
+
+@media only screen and (max-width: 800px) {
+  .table {
+    font-size: 15px;
+  }
+
+  .table-header-input {
+    padding: 7px 0px;
+    min-width: 100px;
+  }
+}
